# 10mm-product-standards

./: .gitignore  README.md  mkdocs.yml
blueprints/: Dockerfile  LICENSE.md  Makefile  README.md  build-mobile.sh  build.sh  prettierrc.json  ruff.toml  run_docker.sh  tsconfig.base.json
blueprints/app/: .env.example  pyproject.toml
blueprints/app/docs/: ARCHITECTURE.md
blueprints/app/planning/: BOARD.md
blueprints/app/planning/epics/: prd.md
blueprints/app/scripts/: seed.py
blueprints/app/src/backend/: main.py
blueprints/app/src/backend/tests/: conftest.py
blueprints/app/src/frontend/: package-lock.json  package.json  playwright.config.ts
blueprints/app/src/mobile/: .env  .eslintrc.js  jest.config.js  package.json
blueprints/app/src/mobile/.maestro/: verification.yaml
blueprints/app/src/mobile/constants/: Config.ts
blueprints/app/src/mobile/tests/: App.test.tsx  setup.ts
blueprints/app/tests/e2e/: verification.spec.ts
blueprints/frontend/: base-theme.css  tailwind.preset.js
docs/: STANDARDS_INDEX.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-use-tailwind-css.md  0003-use-shadcn-ui.md  0004-use-python-fastapi.md  (+16 more)
libraries/backend-core/: pyproject.toml
libraries/backend-core/src/attono_backend_core/: config.py
libraries/backend-core/src/attono_backend_core/auth/: jwt.py
libraries/backend-core/src/attono_backend_core/database/: session.py
libraries/backend-core/src/attono_backend_core/logging/: config.py
libraries/backend-core/src/gms_backend_core/: config.py
libraries/backend-core/src/gms_backend_core/messaging/: services.py
planning/: BOARD.md
scripts/: docs.py
site/: 404.html
(+50 files in other folders)
