[project]
name = "10mm-blueprint-app"
version = "0.1.0"
description = "Gold Standard blueprint for 10mm GMS applications"
requires-python = ">=3.12"
dependencies = [
    "gms-backend-core",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
gms-backend-core = { path = "../../libraries/backend-core" }

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# B008: Do not perform function call in argument defaults (FastAPI Depends)
ignore = ["B008"]
